--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
                             <div class="form-group row">
                                 <label class="col-sm-6 col-form-label">Campsite Type</label>
                                 <div class="col-2 btn-group btn-group-toggle" data-toggle="buttons">
-                                    <label class="btn btn-primary active"><input type="radio" name="siteType" id="siteTent" autocomplete="off"
-                                            checked>Tent</label>
-                                    <label class="btn btn-success"><input type="radio" name="siteRV" id="siteRV" autocomplete="off"
-                                            checked>RV</label>
+                                    <label class="btn btn-primary active"><input type="radio" name="siteType"
+                                            id="siteTent" autocomplete="off" checked>Tent</label>
+                                    <label class="btn btn-success"><input type="radio" name="siteRV" id="siteRV"
+                                            autocomplete="off" checked>RV</label>
                                 </div>
                             </div>
 
@@ -210,16 +210,9 @@
                         <span class="carousel-control-next-icon"></span>
                         <span class="sr-only">Next</span>
                     </a>
-                    <div class="btn-group" id="carouselButton">
-                        <button class="btn btn-danger btn-sm" id="carouselPause">
-                            <i class="fa fa-pause"></i>
-                        </button>
-                        <button class="btn btn-danger btn-sm" id="carouselPlay">
-                            <i class="fa fa-play"></i>
-                        </button>
-                    </div>
-
-                </div>
+                    <button class="btn btn-danger btn-sm" id="carouselPause">
+                        <i class="fa fa-pause"></i>
+                    </button>
             </div>
         </div>
 
@@ -324,17 +317,17 @@
         <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
         <script>
-            $(function() {
-                $(".carousel").carousel( { interval: 2000 } );
-                $("#carouselPause").click(function(){
+            $(function () {
+                $(".carousel").carousel({ interval: 2000 });
+                $("#carouselPause").click(function () {
                     $(".carousel").carousel("pause");
                 });
-                $("#carouselPlay").click(function(){
+                $("#carouselPlay").click(function () {
                     $(".carousel").carousel("cycle");
                 });
             });
         </script>
 
-    </body>
+</body>
 
 </html>
